test/libyul/yulSyntaxTests/objects/conflict_object_parent.yul
object "A" {
  code {}

  data "A" ""
}
// ----
// ParserError 8311: (31-34): Object name cannot be the same as the name of the containing object.
